responsive and nav

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Version: 1.0.0
 								<div class="col-xs-6 col-sm-6 col-6">
 									<div class="hs_logo">
 										<a href="index.html">
-											<img src="images/logo.png" alt="Logo" title="Logo">
+											<img src="images/logo_valle_black.png" alt="Logo" title="Logo">
 										</a>
 									</div>
 								</div>
@@ -118,67 +118,16 @@ Version: 1.0.0
 										<!-- .cd-dropdown -->
 									</div>
 									<nav class="cd-dropdown">
-										<h2><a href="index.html">Xpedia</a></h2>
+										<h2><a href="index.php">FlozaMotors</a></h2>
 										<a href="#0" class="cd-close">Close</a>
 										<ul class="cd-dropdown-content">
-											<li>
-												<form class="cd-search">
-													<input type="search" placeholder="Search...">
-												</form>
+											<li> <a href="#inicio">Inicio</a>
 											</li>
-											<li class="has-children"> <a href="#">Home</a>
-												<ul class="cd-secondary-dropdown is-hidden">
-													<li class="go-back"><a href="#0">Menu</a>
-													</li>
-													<li> <a href="index.html">Home-I</a>
-													</li>
-													<!-- .has-children -->
-													<li> <a href="index_II.html">Home_II</a>
-													</li>
-													<!-- .has-children -->
-												</ul>
-												<!-- .cd-secondary-dropdown -->
+											<li> <a href="#nosotros">Nosotros</a>
 											</li>
-											<li class="has-children"> <a href="#">Car</a>
-												<ul class="cd-secondary-dropdown is-hidden">
-													<li class="go-back"><a href="#0">Menu</a>
-													</li>
-													<li> <a href="car_accessories.html">Car-Accessories</a>
-													</li>
-													<li> <a href="car_booking.html">Car-Booking</a>
-													</li>
-													<li><a href="car_booking_done.html">Car-Booking-Done</a>
-													</li>
-													<li><a href="car_checkout.html">Car-Checkout</a>
-													</li>
-													<li><a href="car_detail_left.html"> Car-Detail-Left</a>
-													</li>
-													<li><a href="car_detail_right.html"> Car-Detail-Right</a>
-													</li>
-													<!-- .has-children -->
-												</ul>
-												<!-- .cd-secondary-dropdown -->
+											<li> <a href="#carros">Carros</a>
 											</li>
-											<li> <a href="about.html">About</a>
-											</li>
-											<li> <a href="team.html">Our Team</a>
-											</li>
-											<li> <a href="services.html">Services</a>
-											</li>
-											<li class="has-children"> <a href="#">Blog</a>
-												<ul class="cd-secondary-dropdown is-hidden">
-													<li class="go-back"><a href="#0">Menu</a>
-													</li>
-													<li> <a href="blog_category.html">Blog Categories</a>
-													</li>
-													<!-- .has-children -->
-													<li> <a href="blog_single.html">Blog Single</a>
-													</li>
-													<!-- .has-children -->
-												</ul>
-												<!-- .cd-secondary-dropdown -->
-											</li>
-											<li> <a href="contact.html">Contacto</a>
+											<li> <a href="#contactanos">Contacto</a>
 											</li>
 										</ul>
 										<!-- .cd-dropdown-content -->
@@ -284,8 +233,12 @@ Version: 1.0.0
 			</div>
 			<div class="x_why_right_main_wrapper">
 				<h3>¿Quienes somos ?</h3>
-				<p>Somos una empresa dedicada al alquiler de automóviles con la experiencia de trabajar más de diez años , con las ganas de superar sus expectativas y atenderlo con el profesionalismo y esmero que usted merece, es que ponemos a su disposición nuestra moderna flota, infraestructura y sobre todo nuestro capital humano comprometido con el buen servicio.
-			
+				<p>Somos una empresa dedicada al alquiler de automóviles con la experiencia 
+					de trabajar más de diez años , con las ganas de superar sus expectativas y 
+					atenderlo con el profesionalismo y esmero que usted merece, 
+					es que ponemos a su disposición nuestra moderna flota, 
+					infraestructura y sobre todo nuestro capital humano comprometido con el buen servicio.
+					<br>
 			</div>
 		</div>
 	</div>
@@ -542,7 +495,7 @@ Version: 1.0.0
 					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<div class="contect_btn contect_btn_contact">
 							<ul>
-								<li><button type="submit" name="enviar">ENVIAR<i class="fa fa-arrow-right"></button>
+								<li><button type="submit" name="enviar">ENVIAR <i class="fa fa-arrow-right"></i></button>
 								</li>
 							</ul>
 						</div>
